add pagination and purchase

--- a/test-store/src/app/core/components/header/header.component.html
+++ b/test-store/src/app/core/components/header/header.component.html
@@ -1,4 +1,7 @@
 <header>
   <img src="assets/images/header.jpg" alt="header">
+  <div *ngIf="showCart">
+    <app-cart></app-cart>
+  </div>
   <div class="container"></div>
 </header>
