--- a/test-store/src/app/core/components/not-found/not-found.component.html
+++ b/test-store/src/app/core/components/not-found/not-found.component.html
@@ -1,1 +1,6 @@
-<p>not-found works!</p>
+<div class="not-found">
+  <div class="align-center"><h1>404</h1></div>
+  <div class="align-center"><h2>Page Not Found</h2></div>
+
+  <div class="align-center button-block" (click)="goHome()"> <button class="btn btn-large btn-dark">GO TO HOME</button> </div>
+</div>
