--- a/test-store/src/app/order/components/purhase/purhase.component.html
+++ b/test-store/src/app/order/components/purhase/purhase.component.html
@@ -1,1 +1,8 @@
-<p>SUCCESS PAYMENT</p>
+<div class="success">
+  <div class="success__image">
+    <img src="assets/images/payment_check.png" alt="payment successful">
+  </div>
+  <div class="success__text">
+    <p>Payment Successful</p>
+  </div>
+</div>
