--- a/test-store/src/app/app.component.html
+++ b/test-store/src/app/app.component.html
@@ -1,8 +1,5 @@
 <app-header></app-header>
-<div class="container">
-  <div class="main">
-
-    <router-outlet></router-outlet>
-  </div>
+<div class="container container_main">
+  <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
