--- a/test-store/src/app/core/components/header/header.component.css
+++ b/test-store/src/app/core/components/header/header.component.css
@@ -1,6 +1,20 @@
+header {
+  position: relative;
+  height: 150px;
+}
+
 img {
   width: 100%;
-  height: 20vh;
+  height: 100%;
   object-fit: cover;
   object-position: top;
+  position: absolute;
+  z-index: -1;
+}
+
+.cart-container {
+  max-height: 100%;
+  width: 100px;
+  margin: 0 0 0 auto;
+  position: relative;
 }
