--- a/test-store/src/app/order/components/card/card.component.html
+++ b/test-store/src/app/order/components/card/card.component.html
@@ -11,7 +11,7 @@
         <div class="panel-body">
           <form role="form">
             <div class="form-group">
-              <label for="cardNumber">CARD NUMBER</label>
+              <label for="cardNumber">CARD NUMBER:</label>
               <div class="input-group">
                 <input type="text" class="form-control" id="cardNumber" placeholder="Valid Card Number"
                        required autofocus/>
@@ -20,8 +20,8 @@
             </div>
             <div class="row">
               <div class="col-xs-7 col-md-7">
-                <div class="form-group">
-                  <label for="expityMonth">EXPIRATION DATE</label>
+                <div class="form-group row">
+                  <div class="col-lg-12"><label for="expityMonth">EXPIRATION DATE: </label></div>
                   <div class="col-xs-6 col-lg-6">
                     <input type="text" class="form-control" id="expityMonth" placeholder="MM" required/>
                   </div>
@@ -31,8 +31,8 @@
               </div>
               <div class="col-xs-5 col-md-5 pull-right">
                 <div class="form-group">
-                  <label for="cvCode">CV CODE</label>
-                  <input type="password" class="form-control" id="cvCode" placeholder="CV" required/>
+                  <label for="cvCode">CVV CODE:</label>
+                  <input type="password" class="form-control" id="cvCode" placeholder="CVV" required/>
                 </div>
               </div>
             </div>
@@ -44,9 +44,8 @@
         <span class="price">{{totalPrice | number : '1.2-2'}}$</span>
       </div>
       <div class="row justify-content-md-center">
-        <button class="btn btn-dark btn-lg pay" (click)="pay()">Submit payment</button>
+        <button class="btn btn-dark btn-lg pay submit-payment" (click)="pay()">PAY</button>
       </div>
     </div>
   </div>
 </div>
-
