--- a/test-store/src/app/shop/components/product-list/product/product.component.css
+++ b/test-store/src/app/shop/components/product-list/product/product.component.css
@@ -1,8 +1,37 @@
+.product-item {
+  text-align: center;
+}
+
+.product-item__image {
+  overflow: hidden;
+}
+
 img {
   height: 200px;
-  width: 150px;
+  transition: 1s ease-in-out;
+  transform: scale(1)
+}
+
+img:hover {
+  transition: 1s ease-in-out;
+  transform: scale(1.2)
 }
 
 .unavailable {
   opacity: 0.5;
+}
+
+.product-item__content {
+  font-family: 'Baloo Paaji 2', cursive;
+}
+
+.product-item__name {
+  font-size: 18px;
+  margin-bottom: 5px
+}
+
+.product-item__price {
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 5px
 }
