--- a/test-store/src/app/shop/components/product-list/product/product.component.html
+++ b/test-store/src/app/shop/components/product-list/product/product.component.html
@@ -1,6 +1,10 @@
 <div class="product-item" [ngClass]="{unavailable: !isAvailable}">
-  <p>{{product.name}}</p>
-  <p>{{product.price}}$</p>
-  <img [src]=getImageLink() alt="image game">
-  <button class="btn btn-primary" (click)="buy()" [disabled]=!isAvailable>Buy</button>
+  <div class="product-item__image">
+    <img [src]=getImageLink() alt="image game">
+  </div>
+  <div class="product-item__content">
+    <p class="product-item__name">{{product.name}}</p>
+    <p class="product-item__price">{{product.price}}$</p>
+    <button class="btn btn-primary" (click)="buy()" [disabled]=!isAvailable>Buy</button>
+  </div>
 </div>
