--- a/test-store/src/styles.css
+++ b/test-store/src/styles.css
@@ -1,4 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&display=swap');
+
 * {
   padding: 0;
   margin: 0;
 }
+
+body {
+  height: 100vh;
+}
+
+app-root {
+  height: 100%;
+}
+
+
+
