--- a/test-store/src/app/order/components/payment/payment.component.css
+++ b/test-store/src/app/order/components/payment/payment.component.css
@@ -35,3 +35,14 @@
   font-size: 23px;
   padding: 10px 35px;
 }
+.invalid {
+  border: 1px solid red;
+}
+
+.error {
+  color: red;
+}
+
+span.error {
+  display: block;
+}
