--- a/test-store/src/app/shop/components/product-list/product-list.component.css
+++ b/test-store/src/app/shop/components/product-list/product-list.component.css
@@ -20,6 +20,7 @@ nav li {
   height: 33%;
   border-bottom: 1px outset white;
   align-items: center;
+  cursor: pointer;
 }
 
 nav li:hover {
@@ -33,6 +34,13 @@ nav li:hover a {
 
 nav li:last-child {
   border: 0;
+  border-bottom-left-radius: 7px;
+  border-bottom-right-radius: 7px;
+}
+
+nav li:first-child {
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
 }
 
 .pagination {
